--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
     "url": "https://github.com/chmontgomery/gulp-shrinkwrap"
   },
   "dependencies": {
-    "gulp-util": "3.0.1",
-    "nopt": "3.0.1",
-    "npm": "2.1.6",
-    "npmconf": "2.1.1",
+    "bluebird": "2.9.14",
+    "graceful-fs": "3.0.6",
+    "gulp-util": "3.0.4",
+    "lodash": "3.1.0",
+    "npm": "2.7.0",
     "through2": "0.6.3"
   },
   "devDependencies": {
-    "gulp": "3.8.9",
-    "mocha": "2.0.1"
+    "del": "^1.1.1",
+    "gulp": "*",
+    "mocha": "*"
   }
 }
